started on auth flow

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -1,14 +1,10 @@
 //colors
-$purplePrimary : #633CFF;
-$purpleHover : #BEADFF;
-$lightPurple : #EFEBFF;
-$darkGrey : #333333;
-$grey : #737373;
-$borderGrey : #d9d9d9;
-$lightGrey : #fafafa;
-$white : #ffffff;
-$red : #FF3939;
-$emptyGrey : #eeeeee;
+$orangePrimary : #FF7E3A;
+$peachSecondary : #FFD7C2;
+$brown : #73391A;
+$black : #1C0E06;
+$lightPeach : #FFEADF;
+
 
 
 
