--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -4,6 +4,10 @@ $peachSecondary : #FFD7C2;
 $brown : #73391A;
 $black : #1C0E06;
 $lightPeach : #FFEADF;
+$lightWarmGrey: #f9f9f9;
+$lightColdGrey: #F3F4F8;
+$spotifyGreen: #1DB954;
+$white: #FFFFFF;
 
 
 
