--- a/src/css/style.css
+++ b/src/css/style.css
@@ -127,4 +127,50 @@ a {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+}
+
+.ctaSpotify {
+  color: #FFFFFF;
+  background-color: #1DB954;
+  padding-bottom: 16px;
+  padding-top: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+  text-decoration: none;
+  border-radius: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  flex-basis: auto;
+}
+.ctaSpotify:hover {
+  background-color: #168d40;
+  box-shadow: 0px 4px 42px -12px rgba(29, 185, 84, 0.5);
+}
+
+.login {
+  background-color: #F3F4F8;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login .loginContainer {
+  width: 50%;
+  background-color: #f9f9f9;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+}
+.login .splashImg {
+  width: 50%;
+  background-image: url("../assets/loginSplash.png");
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }/*# sourceMappingURL=style.css.map */
