--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,7 +8,7 @@
 @import "./base/typography";
 
 //Components
-
+@import "./components/cta";
 
 
 
@@ -17,7 +17,7 @@
 
 
 //Pages
-
+@import "./pages/login";
 
 
 //Themes
