--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -19,6 +19,10 @@ p{
     @include font(1rem, 400, 0, 18px);
 }
 
+.menuTitle{
+    @include font(1rem, 700, 0, 18px);
+}
+
 a{
     @include font(1rem, 400, 0, 24px);
  
