finished side nav and top header, reworked auth and refresh token

--- a/src/css/components/_topHeader.scss
+++ b/src/css/components/_topHeader.scss
@@ -13,5 +13,24 @@
         gap:$s2;
         color:$black;
         align-items: center;
+
+        img{
+            width:50px;
+            height:50px;
+            object-fit: cover;
+            border-radius: $r1;
+        }
+
+
+        div{
+            display:flex;
+            flex-direction: column;
+
+            p{
+                font-size: 0.8rem;
+                font-weight: 400;
+                color:$darkGrey
+            }
+        }
     }
 }
