started work on genre list

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -12,6 +12,8 @@
 @import "./components/sideNav";
 @import "./components/menuItem";
 @import "./components/topHeader";
+@import "./components/genreList";
+@import "./components/genreCard";
 
 
 
