--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@ h1 {
 h2 {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
   letter-spacing: 1px;
   font-size: 1.25rem;
@@ -80,7 +80,7 @@ h2 {
 h3 {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
   letter-spacing: 0;
   font-size: 1rem;
@@ -231,6 +231,42 @@ a {
   color: #99938F;
 }
 
+.genreList {
+  background-color: #FFFFFF;
+  width: 100%;
+  padding: 24px;
+  border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.genreContHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chevronCont {
+  display: flex;
+  gap: 24px;
+}
+
+.genreCard {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 160px;
+  border: solid 1px #FFD7C2;
+  border-radius: 16px;
+  color: #1C0E06;
+}
+.genreCard img {
+  align-self: center;
+  border-radius: 8px;
+}
+
 body, .root {
   background-color: #F3F4F8;
 }
@@ -269,4 +305,7 @@ body, .root {
 .mainWrapper {
   padding: 40px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }/*# sourceMappingURL=style.css.map */
