--- a/src/css/components/_genreList.scss
+++ b/src/css/components/_genreList.scss
@@ -6,6 +6,7 @@
     display:flex;
     flex-direction: column;
     gap:$s3;
+    overflow: hidden;
 }
 
 .genreContHeader{
@@ -15,7 +16,24 @@
     
 }
 
+
+.genreListCont{
+    display:flex;
+    gap:$s3;
+}
+
 .chevronCont{
     display:flex;
     gap:$s3;	
+}
+
+.swiper {
+    width: 100%;
+}
+
+.carouselButton{
+
+    &:hover{
+        cursor: pointer;
+    }
 }
