--- a/src/css/components/_topHeader.scss
+++ b/src/css/components/_topHeader.scss
@@ -4,8 +4,20 @@
     width:100%;
     align-items: center;
     
-    h1{
-        color:$black;
+   
+
+    .pageTitle{
+        display:flex;
+        gap:$s1;
+        align-items: center;
+        h1{
+            color:$black;
+        }
+        h2{
+            color:$darkGrey;
+            font-size: 1rem;
+            font-weight: 400;
+        }
     }
 
     .userProfile{
