player working with genre control

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $orangePrimary : #FF7E3A;
 $peachSecondary : #FFD7C2;
 $brown : #73391A;
-$black : #1C0E06;
+$black : #353535;
 $lightPeach : #FFEADF;
 $lightWarmGrey: #f9f9f9;
 $lightColdGrey: #F3F4F8;
