--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,6 +14,10 @@
 @import "./components/topHeader";
 @import "./components/genreList";
 @import "./components/genreCard";
+@import "./components/player";
+@import "./components/playerControls";
+@import "./components/tooltip";
+@import "./components/loader";
 
 
 
