--- a/src/css/components/_genreList.scss
+++ b/src/css/components/_genreList.scss
@@ -1,12 +1,17 @@
 .genreList{
     background-color:$white;
     width:100%;
+    height:auto;
     padding:$s3;
     border-radius:$r4;
     display:flex;
     flex-direction: column;
     gap:$s3;
     overflow: hidden;
+
+    h2{
+        color:$black;
+    }
 }
 
 .genreContHeader{
