added recently played list

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -7,8 +7,9 @@ $lightPeach : #FFEADF;
 $lightWarmGrey: #f9f9f9;
 $lightColdGrey: #F3F4F8;
 $spotifyGreen: #1DB954;
-$white: #FFFFFF;
+$white: #ffffff83;
 $darkGrey: #99938F;
+$whiteSolid:#ffffff;
 
 
 
