--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,7 @@
 @import "./components/playerControls";
 @import "./components/tooltip";
 @import "./components/loader";
+@import "./components/recentlyPlayed";
 
 
 
