--- a/src/css/components/_player.scss
+++ b/src/css/components/_player.scss
@@ -10,6 +10,7 @@
     flex-direction:column;
     gap:$s3;
     align-items: center;
+    flex-shrink: 0;
 
     .songThumbnail{
         width:228px;
