--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,7 +157,7 @@ a {
 }
 
 .ctaSpotify {
-  color: #FFFFFF;
+  color: rgba(255, 255, 255, 0.5137254902);
   background-color: #1DB954;
   padding-bottom: 16px;
   padding-top: 16px;
@@ -256,7 +256,7 @@ a {
 }
 
 .genreList {
-  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.5137254902);
   width: 100%;
   height: auto;
   padding: 24px;
@@ -319,12 +319,13 @@ a {
   padding-right: 16px;
   padding-top: 16px;
   padding-bottom: 24px;
-  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.5137254902);
   border-radius: 24px;
   display: flex;
   flex-direction: column;
   gap: 24px;
   align-items: center;
+  flex-shrink: 0;
 }
 .player .songThumbnail {
   width: 228px;
@@ -342,7 +343,7 @@ a {
 
 .audioCont {
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.5137254902);
 }
 .audioCont .controlBar {
   flex-direction: column;
@@ -446,6 +447,46 @@ a {
   align-items: center;
 }
 
+.recentlyPlayedContainer {
+  background-color: rgba(255, 255, 255, 0.5137254902);
+  border-radius: 24px;
+  width: 100%;
+  height: 457px;
+  padding: 24px;
+  color: #353535;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  overflow: auto;
+}
+
+.recentlyPlayedCards {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.recentlyPlayedCards .recentlyPlayedCard {
+  background-color: #ffffff;
+  padding: 16px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedDetails {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedDetails img {
+  border-radius: 8px;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedDetails .recentlyPlayedTileAndArtist {
+  display: flex;
+  flex-direction: column;
+}
+
 body, .root {
   background-color: #F3F4F8;
 }
@@ -488,4 +529,9 @@ body, .root {
   flex-direction: column;
   gap: 32px;
   overflow: hidden;
+}
+
+.playerAndRecentlyPlayedContainer {
+  display: flex;
+  gap: 24px;
 }/*# sourceMappingURL=style.css.map */
