--- a/src/css/components/_playerControls.scss
+++ b/src/css/components/_playerControls.scss
@@ -63,6 +63,10 @@
             -moz-box-shadow: 0px 2px 15px 0px rgba(255, 126, 58,0.5);
             box-shadow: 0px 2px 15px 0px rgba(255, 126, 58, 0.5);
             border-radius:50%;
+
+            &:hover{
+                background-color: $peachSecondary;
+            }
         }
     }
 
