--- a/src/css/components/_tooltip.scss
+++ b/src/css/components/_tooltip.scss
@@ -7,11 +7,11 @@
   /* Tooltip text */
   .tooltip .tooltiptext {
     visibility: hidden;
-    width: 130px;
-    bottom: 120%;
+    width: 160px;
+    bottom: 140%;
     left: 50%;
-    margin-left: -65px; /* Use half of the width (120/2 = 60), to center the tooltip */
-    background-color: #2B3442;
+    margin-left: -80px; /* Use half of the width (120/2 = 60), to center the tooltip */
+    background-color: #FF7E3A;
     color: #fff;
     text-align: center;
     padding: 1rem;
@@ -37,7 +37,7 @@
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color:#2B3442 transparent transparent transparent;
+    border-color:#FF7E3A transparent transparent transparent;
   }
 
   .tooltipHover:hover{
