--- a/src/css/style.css
+++ b/src/css/style.css
@@ -385,6 +385,9 @@ a {
   box-shadow: 0px 2px 15px 0px rgba(255, 126, 58, 0.5);
   border-radius: 50%;
 }
+.audioCont .controls .playBtn:hover {
+  background-color: #FFD7C2;
+}
 
 .tooltip {
   position: relative;
@@ -394,11 +397,11 @@ a {
 /* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 130px;
-  bottom: 120%;
+  width: 160px;
+  bottom: 140%;
   left: 50%;
-  margin-left: -65px; /* Use half of the width (120/2 = 60), to center the tooltip */
-  background-color: #2B3442;
+  margin-left: -80px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  background-color: #FF7E3A;
   color: #fff;
   text-align: center;
   padding: 1rem;
@@ -432,7 +435,7 @@ a {
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: #2B3442 transparent transparent transparent;
+  border-color: #FF7E3A transparent transparent transparent;
 }
 
 .tooltipHover:hover {
@@ -457,7 +460,8 @@ a {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .recentlyPlayedCards {
@@ -485,6 +489,18 @@ a {
 .recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedDetails .recentlyPlayedTileAndArtist {
   display: flex;
   flex-direction: column;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedButtons {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  text-align: right;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedButtons p {
+  color: darkGrey;
+}
+.recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedButtons p span {
+  font-weight: 700;
 }
 
 body, .root {
