created full genre list

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -19,6 +19,7 @@
 @import "./components/tooltip";
 @import "./components/loader";
 @import "./components/recentlyPlayed";
+@import "./components/genreEdit";
 
 
 
