--- a/src/css/components/_genreCard.scss
+++ b/src/css/components/_genreCard.scss
@@ -4,9 +4,14 @@
     flex-direction: column;
     gap:$s1;
     width:120px;
-    border: solid 1px $peachSecondary;
+    // border: solid 1px $peachSecondary;
     border-radius: $r3;
     color:$black;
+    background-color:$whiteSolid;
+    -webkit-box-shadow: 0px 10px 12px -9px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px 10px 12px -9px rgba(0,0,0,0.12);
+    box-shadow: 0px 10px 12px -9px rgba(0,0,0,0.12);  
+    margin-bottom: $s2;
     
 
     img{
