--- a/src/css/style.css
+++ b/src/css/style.css
@@ -300,9 +300,11 @@ a {
   flex-direction: column;
   gap: 8px;
   width: 120px;
-  border: solid 1px #FFD7C2;
   border-radius: 16px;
   color: #353535;
+  background-color: #ffffff;
+  box-shadow: 0px 10px 12px -9px rgba(0, 0, 0, 0.12);
+  margin-bottom: 16px;
 }
 .genreCard img {
   align-self: center;
@@ -501,6 +503,34 @@ a {
 }
 .recentlyPlayedCards .recentlyPlayedCard .recentlyPlayedButtons p span {
   font-weight: 700;
+}
+
+.genreEdit {
+  background-color: rgba(255, 255, 255, 0.5137254902);
+  width: 100%;
+  padding: 24px;
+  gap: 24px;
+  border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  height: 457px;
+  gap: 24px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.genreEdit h2 {
+  color: #353535;
+}
+.genreEdit .genreEditList {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+}
+
+.genreEditCard {
+  background-color: #ffffff;
+  padding: 16px;
+  border-radius: 8px;
 }
 
 body, .root {
