--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -20,6 +20,7 @@
 @import "./components/loader";
 @import "./components/recentlyPlayed";
 @import "./components/genreEdit";
+@import "./components/searchBar";
 
 
 
