--- a/src/css/components/_genreEdit.scss
+++ b/src/css/components/_genreEdit.scss
@@ -9,9 +9,17 @@
     flex-direction: column;
     height:457px;
     gap:$s3;
-    h2{
-        color:$black;
+
+    .genreEditHeader{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        h2{
+            color:$black;
+        }
     }
+   
 
     overflow-x: hidden;
     overflow-y: auto;
@@ -29,4 +37,10 @@
     background-color: $whiteSolid;
     padding:$s2;
     border-radius: $r1;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    
 }
